<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_coffee">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.coffeetracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.coffeetracker.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.coffeetracker.ui.notifications.NotificationsFragment"
        android:label="Personalize"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_coffee"
        android:name="com.example.coffeetracker.ui.CoffeePickerFragment"
        android:label="@string/coffee_title_track"
        tools:layout="@layout/fragment_coffee_picker" />
    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.coffeetracker.ui.StatisticsFragment"
        android:label="@string/coffee_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>
