<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/act_user_name"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Name:"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Jon Jonescu" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/act_user_height"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Height:"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="#FFFFFF"
            android:layout_marginEnd="8dp"
            android:hint="170 cm"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/act_user_weight"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Weight:"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="#FFFFFF"
            android:layout_marginEnd="8dp"
            android:hint="70 kg"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/act_user_age"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Age:"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="#FFFFFF"
            android:layout_marginEnd="8dp"
            android:inputType="number"
            android:hint="20"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout4"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/act_user_gender"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Gender:"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:checkedButton="@id/act_radio_male_gender">

            <RadioButton
                android:id="@+id/act_radio_male_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                />

            <RadioButton
                android:id="@+id/act_radio_female_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout5"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/act_user_set_coffee"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Set coffee"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/act_user_small_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/coffee_small"
            android:minHeight="24dp"
            android:backgroundTint="@color/colorSecondary"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/act_user_medium_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/coffee_medium"
            android:minHeight="24dp"
            android:backgroundTint="@color/colorSecondary"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/act_user_large_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/coffee_large"
            android:minHeight="24dp"
            android:backgroundTint="@color/colorSecondary"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>